# visuallufactorization

./: .gitignore  LICENSE  LU_factorization.pro  Makefile  Matrix.hpp  NumericMatrix.hpp  Readme.md  Squarematrix.h  Squarematrix.hpp  lu_main_window.cpp  lu_main_window.h  lu_main_window.ui  main.cpp  meson.build  meson_options.txt
.github/workflows/: build-and-check.yml
test/: TestNumericMatrix.cpp  meson.build
